// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCheckboxField A with a link 1`] = `
{
  "columns": 1,
  "isRequired": false,
  "isValid": false,
  "isVisible": true,
  "label": "label",
  "link": "https://example.com",
  "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
  "type": "checkbox",
  "unit": "",
  "value": false,
}
`;

exports[`createSelectField A with a link 1`] = `
{
  "columns": 1,
  "isRequired": false,
  "isValid": false,
  "isVisible": true,
  "label": "label",
  "link": "https://example.com",
  "options": [],
  "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
  "type": "select",
  "unit": "",
  "value": "",
}
`;

exports[`validateForm A invalid field value 1`] = `
{
  "errorMessage": "AppWrite database id is required",
  "fields": {
    "bucketId": {
      "columns": 1,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "AppWrite storage bucket id",
      "link": "https://appwrite.io/",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "azerty",
    },
    "collectionId": {
      "columns": 1,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "AppWrite collection id",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "databaseId": {
      "columns": 1,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "AppWrite database id",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
  },
  "isTouched": false,
  "isValid": false,
}
`;

exports[`validateForm B valid form 1`] = `
{
  "errorMessage": "",
  "fields": {
    "bucketId": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "AppWrite storage bucket id",
      "link": "https://appwrite.io/",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "some-nice-bucket-uuid",
    },
    "collectionId": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "AppWrite collection id",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "some-nice-collection-uuid",
    },
    "databaseId": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "AppWrite database id",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "some-nice-database-uuid",
    },
  },
  "isTouched": false,
  "isValid": true,
}
`;

exports[`validateForm C empty cases 1`] = `
{
  "errorMessage": "",
  "fields": {
    "bucketId": {
      "columns": 1,
      "isRequired": false,
      "isValid": true,
      "isVisible": true,
      "label": "AppWrite storage bucket id",
      "link": "https://appwrite.io/",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "collectionId": {
      "columns": 1,
      "isRequired": false,
      "isValid": true,
      "isVisible": true,
      "label": "AppWrite collection id",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": undefined,
    },
    "databaseId": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "AppWrite database id",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{20,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "some-nice-database-uuid",
    },
  },
  "isTouched": false,
  "isValid": true,
}
`;
